One datasource per row

--- a/mustache/datapoints.mustache
+++ b/mustache/datapoints.mustache
@@ -50,8 +50,8 @@
         },
         "settable":false
       },
-      "dataSourceXid":"DS_{{zoneId}}_{{hallId}}_{{row}}_{{rack}}",
-      "deviceName":"{{zoneName}} - {{hallName}} - {{row}}/{{rack}}",
+      "dataSourceXid":"DS_{{zoneId}}_{{hallId}}_{{row}}",
+      "deviceName":"{{zoneName}} - {{hallName}} - Row {{row}}/Rack {{rack}}",
       "tags":{
         "zone": "{{zoneId}}",
         "hall": "{{hallId}}",
@@ -74,8 +74,8 @@
         },
         "settable":false
       },
-      "dataSourceXid":"DS_{{zoneId}}_{{hallId}}_{{row}}_{{rack}}",
-      "deviceName":"{{zoneName}} - {{hallName}} - {{row}}/{{rack}}",
+      "dataSourceXid":"DS_{{zoneId}}_{{hallId}}_{{row}}",
+      "deviceName":"{{zoneName}} - {{hallName}} - Row {{row}}/Rack {{rack}}",
       "tags":{
         "zone": "{{zoneId}}",
         "hall": "{{hallId}}",
